; ModuleID = '/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_lsapi_enterLVE.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/litespeed/extr_lsapilib.c_lsapi_enterLVE.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_lve = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [32 x i8] c"enter LVE (%d) : ressult: %d !\0A\00", align 1
@.str.1 = private unnamed_addr constant [52 x i8] c"LSAPI: lve_enter() failure, reached resource limit.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @lsapi_enterLVE to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lsapi_enterLVE(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* @s_lve, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %28

10:                                               ; preds = %2
  %11 = load i64, i64* %5, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %10
  store i32 -1, i32* %7, align 4
  %14 = load i64, i64* @s_lve, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @fp_lve_enter(i64 %14, i64 %15, i32 -1, i32 -1, i32* %6)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %13
  %20 = load i64, i64* %5, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @lsapi_log(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i64 %20, i32 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @LSAPI_perror_r(i32* %23, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @lsapi_lve_error(i32* %25)
  store i32 -1, i32* %3, align 4
  br label %29

27:                                               ; preds = %13
  br label %28

28:                                               ; preds = %27, %10, %2
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @fp_lve_enter(i64, i64, i32, i32, i32*) #1

declare dso_local i32 @lsapi_log(i8*, i64, i32) #1

declare dso_local i32 @LSAPI_perror_r(i32*, i8*, i32*) #1

declare dso_local i32 @lsapi_lve_error(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
